--- a/_includes/body-navbar.html
+++ b/_includes/body-navbar.html
@@ -6,15 +6,15 @@
     <ul class="list-reset center m0 p0 flex justify-center nowrap">
       </li>
       <li class="ampstart-nav-item ">
-        <a href="#" class="text-decoration-none block">About</a>
+        <a href="#about" class="text-decoration-none block">About</a>
       </li>
 
       <li class="ampstart-nav-item ">
-        <a href="#" class="text-decoration-none block">Speakers</a>
+        <a href="#schedule" class="text-decoration-none block">Schedule</a>
       </li>
 
       <li class="ampstart-nav-item ">
-        <a href="#" class="text-decoration-none block">Contact</a>
+        <a href="#contact" class="text-decoration-none block">Contact</a>
       </li>
       
       <li class="ampstart-nav-item ampstart-nav-dropdown relative">
