Updated links to work and clean up social buttons

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,8 +26,16 @@ limitations under the License.
   </head>
   <body>
     {% include body-navbar.html %}
-    
-    {{ content }}
+
+    <main id="content" role="main" class="">
+      
+        {{ content }}
+        
+        {% include body-social-section.html %}
+      
+    </main>
+
     {% include body-footer.html %}
+
   </body>
 </html>
