Added verification meta tag

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,8 @@ limitations under the License.
     
     <link rel="canonical" href="{{ site.url }}{{ page.url | replace:'index.html',''}}">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+
+    <meta name="google-site-verification" content="uqINAJCiiD1hvT2l8JEEhysJgW0sE_u0yCgsChxkslg" />
     
     {% include head-styles.html %}
   </head>
