--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,8 @@ limitations under the License.
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
 
     <meta name="google-site-verification" content="uqINAJCiiD1hvT2l8JEEhysJgW0sE_u0yCgsChxkslg" />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     
     {% include head-styles.html %}
   </head>
