Added rel noopener to links to improve security

--- a/_includes/body-footer.html
+++ b/_includes/body-footer.html
@@ -2,7 +2,7 @@
 <footer class="ampstart-footer flex flex-column items-center px3 ">
 <nav class="ampstart-footer-nav">
 <ul class="list-reset flex flex-wrap mb3">
-<li class="px1"><a class="text-decoration-none ampstart-label" href="https://www.meetup.com/Transit-Techies-NYC/discussions/" target="_blank">Contact</a></li>
+<li class="px1"><a class="text-decoration-none ampstart-label" href="https://www.meetup.com/Transit-Techies-NYC/discussions/" target="_blank" rel="noopener">Contact</a></li>
 </ul>
 </nav>
 <small>
