--- a/_includes/body-navbar.html
+++ b/_includes/body-navbar.html
@@ -6,15 +6,19 @@
     <ul class="list-reset center m0 p0 flex justify-center nowrap">
       </li>
       <li class="ampstart-nav-item ">
-        <a href="#about" class="text-decoration-none block">About</a>
+        <a href="/#about" class="text-decoration-none block">About</a>
       </li>
 
       <li class="ampstart-nav-item ">
-        <a href="#schedule" class="text-decoration-none block">Schedule</a>
+        <a href="/#schedule" class="text-decoration-none block">Schedule</a>
       </li>
 
       <li class="ampstart-nav-item ">
-        <a href="https://www.meetup.com/Transit-Techies-NYC/discussions/" target="_blank" rel="noopener" class="text-decoration-none block">Contact/Discussion</a>
+        <a href="/#past-speakers" class="text-decoration-none block">Past Speakers</a>
+      </li>
+
+      <li class="ampstart-nav-item ">
+        <a href="/talks" class="text-decoration-none block">Past Talks</a>
       </li>
       
       <li class="ampstart-nav-item ampstart-nav-dropdown relative">
@@ -22,6 +26,7 @@
         <section>
           <header>Additional Resources</header>
           <ul class="ampstart-dropdown-items list-reset m0 p0">
+              <li class="ampstart-dropdown-item"><a href="https://www.meetup.com/Transit-Techies-NYC/discussions/" class="text-decoration-none" target="_blank" rel="noopener">Contact/Discussion</a></li>
               <li class="ampstart-dropdown-item"><a href="https://github.com/tyleragreen/transit-techies-nyc" class="text-decoration-none" target="_blank" rel="noopener">GitHub Repo</a></li>
               <li class="ampstart-dropdown-item"><a href="https://www.meetup.com/Transportation-Techies/" class="text-decoration-none" target="_blank" rel="noopener">D.C. Meetup</a></li>
           </ul>
@@ -41,15 +46,17 @@
   <nav class="ampstart-sidebar-nav ampstart-nav">
     <ul class="list-reset m0 p0 ampstart-label">
       </li>
-      <li class="ampstart-nav-item"><a href="#about">About</a></li>
-      <li class="ampstart-nav-item"><a href="#schedule">Schedule</a></li>
-      <li class="ampstart-nav-item"><a href="https://www.meetup.com/Transit-Techies-NYC/discussions/" target="_blank" rel="noopener">Contact</a></li>
+      <li class="ampstart-nav-item"><a href="/#about">About</a></li>
+      <li class="ampstart-nav-item"><a href="/#schedule">Schedule</a></li>
+      <li class="ampstart-nav-item"><a href="/#past-speakers">Past Speakers</a></li>
+      <li class="ampstart-nav-item"><a href="/talks">Past Talks</a></li>
       <li class="ampstart-nav-item ampstart-nav-dropdown relative">
 
         <amp-accordion layout="container" disable-session-states="" class="ampstart-dropdown">
           <section>
             <header>Additional Resources</header>
             <ul class="ampstart-dropdown-items list-reset m0 p0">
+                <li class="ampstart-dropdown-item"><a href="https://www.meetup.com/Transit-Techies-NYC/discussions/" class="text-decoration-none" target="_blank" rel="noopener">Contact/Discussion</a></li>
                 <li class="ampstart-dropdown-item"><a href="https://github.com/tyleragreen/transit-techies-nyc" class="text-decoration-none" target="_blank" rel="noopener">GitHub Repo</a></li>
                 <li class="ampstart-dropdown-item"><a href="https://www.meetup.com/Transportation-Techies/" class="text-decoration-none" target="_blank" rel="noopener">D.C. Meetup</a></li>
             </ul>
