general sections restructured

--- a/_includes/body-footer.html
+++ b/_includes/body-footer.html
@@ -1,5 +1,8 @@
 <!-- Start Footer -->
 <footer class="ampstart-footer flex flex-column items-center px3 ">
+
+	{% include body-social-section.html %}
+
 <nav class="ampstart-footer-nav">
 <ul class="list-reset flex flex-wrap mb3">
 <li class="px1"><a class="text-decoration-none ampstart-label" href="https://www.meetup.com/Transit-Techies-NYC/discussions/" target="_blank" rel="noopener">Contact</a></li>
