--- a/_includes/head-styles.html
+++ b/_includes/head-styles.html
@@ -3,6 +3,9 @@
 /* Custom CSS */
 .page-title { position:absolute; left: 50px; font-weight: bold; }
 .page-title a { text-decoration: unset; }
+
+
+
 .section-title { text-align: center; }
 section {
   margin-top: 20px;
@@ -19,18 +22,21 @@ section {
 }
 
 #past-speakers-container .card {
-  width: 200px;
+  width: 165px;
   text-align: center;
 }
 
 #past-speakers-container .card amp-img{
-  border-radius: 50%;
+  /*border-radius: 50%;*/
+  width: 165px;
+  height: 165px;
 }
 
 #past-speakers-container .card .speaker-name {
   display: inline-block;
-  font-weight: bold;
-  font-size: 1.15em
+  font-weight: regular;
+  font-size: 1em;
+  margin: 4px auto 16px auto;
 }
 
 .flexb {
@@ -53,18 +59,18 @@ section {
 }
 
 .card {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  border-radius: 5px; /* 5px rounded corners */
+  box-shadow: 0 3px 8px 0 rgba(0,0,0,0.1);
+  transition: 0.2s;
+  border-radius: 1px; /* 1px rounded corners */
   margin: 10px auto 5px auto;
-  padding: 5px;
+  padding: 0px;
 }
 
 .placeholder-card {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  border-radius: 5px; /* 5px rounded corners */
+  box-shadow: 0 3px 8px 0 rgba(0,0,0,0.1);
+  border-radius: 1px; /* 1px rounded corners */
   margin: 10px auto 5px auto;
-  padding: 5px;
+  padding: 0px;
   width: 80%;
   height: 110px;
 }
