--- a/_includes/body-navbar.html
+++ b/_includes/body-navbar.html
@@ -3,31 +3,28 @@
   <div role="button" on="tap:header-sidebar.toggle" tabindex="0" class="ampstart-navbar-trigger md-hide lg-hide pr2">☰</div>
   <span class="page-title"><a href="/">Transit Techies NYC</a></span>
   <nav class="ampstart-headerbar-nav ampstart-nav xs-hide sm-hide">
-    <ul class="list-reset center m0 p0 flex justify-center nowrap">
+    <ul class="list-reset right m0 p0 flex justify-center nowrap">
       </li>
       <li class="ampstart-nav-item ">
-        <a href="/#about" class="text-decoration-none block">About</a>
-      </li>
-
-      <li class="ampstart-nav-item ">
-        <a href="/#schedule" class="text-decoration-none block">Schedule</a>
+        <a href="/#about" class="text-decoration-none block">ABOUT</a>
       </li>
 
       <li class="ampstart-nav-item ">
-        <a href="/#past-speakers" class="text-decoration-none block">Past Speakers</a>
+        <a href="https://www.meetup.com/Transit-Techies-NYC/discussions/"  target="_blank" rel="noopener" class="text-decoration-none block">MEETUP</a>
       </li>
 
       <li class="ampstart-nav-item ">
-        <a href="/talks" class="text-decoration-none block">Past Talks</a>
+        <a href="/past" class="text-decoration-none block">PAST EVENTS</a>
       </li>
       
       <li class="ampstart-nav-item ampstart-nav-dropdown relative">
         <amp-accordion layout="container" disable-session-states="" class="ampstart-dropdown absolute top-0 left-0 right-0 bottom-0">
         <section>
-          <header>Additional Resources</header>
+          <header>RESOURCES</header>
           <ul class="ampstart-dropdown-items list-reset m0 p0">
+              <li class="ampstart-dropdown-item"><a href="https://www.youtube.com/channel/UCKSC5WJLFaWQKB0d5BnI6LA" class="text-decoration-none" target="_blank" rel="noopener">Videos</a></li>
               <li class="ampstart-dropdown-item"><a href="https://www.meetup.com/Transit-Techies-NYC/discussions/" class="text-decoration-none" target="_blank" rel="noopener">Contact/Discussion</a></li>
-              <li class="ampstart-dropdown-item"><a href="https://www.meetup.com/Transportation-Techies/" class="text-decoration-none" target="_blank" rel="noopener">D.C. Meetup</a></li>
+              <li class="ampstart-dropdown-item"><a href="https://www.meetup.com/Transportation-Techies/" class="text-decoration-none" target="_blank" rel="noopener">Transportation Techies D.C.</a></li>
           </ul>
         </section>
         </amp-accordion>
