--- a/_includes/body-submit.html
+++ b/_includes/body-submit.html
@@ -1,5 +1,7 @@
-<section id="submit-section">
-  <h3>Submit a Talk</h3>
-  <p>Made something you want to show the community? Have an idea for a talk? Fill in our open call for speakers form!</p>
-  <button class="ampstart-btn">Speaker Form</button>
+<section id="submit-section" class="blocked center">
+	<div class="clearfix">
+	  <h3>Submit a Talk</h3>
+	  <p class="px3">Made something you want to show the community? Have an idea for a talk? Fill in our open call for speakers form!</p>
+	  <a href="https://goo.gl/forms/yHRxsngEwGvJHQux2" title="https://goo.gl/forms/yHRxsngEwGvJHQux2" target="_blank" rel="noopener"><button class="ampstart-btn primary-btn-white centered">Speaker Form</button></a>
+	</div>
 </section>
