--- a/_includes/body-videos.html
+++ b/_includes/body-videos.html
@@ -1,5 +1,5 @@
-<section id="videos-section">
+<section id="videos-section" class="blocked center">
   <h3>Videos</h3>
   <p>By popular demand from folks who can't make our events, we’ve begun recording presentations since Transit Techies #4. See the videos on our Youtube Channel!</p>
-  <a href="https://www.youtube.com/channel/UCKSC5WJLFaWQKB0d5BnI6LA" target="_blank" rel="noopener"><button  class="ampstart-btn">Youtube</button></a>
+  <a href="https://www.youtube.com/channel/UCKSC5WJLFaWQKB0d5BnI6LA" target="_blank" rel="noopener"><button  class="ampstart-btn primary-btn-purple">Youtube</button></a>
 </section>
