--- a/_includes/body-navbar.html
+++ b/_includes/body-navbar.html
@@ -43,17 +43,17 @@
     <ul class="list-reset m0 p0 ampstart-label">
       </li>
       <li class="ampstart-nav-item"><a href="/#about">About</a></li>
-      <li class="ampstart-nav-item"><a href="/#schedule">Schedule</a></li>
-      <li class="ampstart-nav-item"><a href="/#past-speakers">Past Speakers</a></li>
-      <li class="ampstart-nav-item"><a href="/talks">Past Talks</a></li>
+      <li class="ampstart-nav-item"><a href="https://www.meetup.com/Transit-Techies-NYC/discussions/">Meetup</a></li>
+      <li class="ampstart-nav-item"><a href="/past">Past Events</a></li>
       <li class="ampstart-nav-item ampstart-nav-dropdown relative">
 
         <amp-accordion layout="container" disable-session-states="" class="ampstart-dropdown">
           <section>
-            <header>Additional Resources</header>
+            <header>Resources</header>
             <ul class="ampstart-dropdown-items list-reset m0 p0">
+                <li class="ampstart-dropdown-item"><a href="https://www.youtube.com/channel/UCKSC5WJLFaWQKB0d5BnI6LA" class="text-decoration-none" target="_blank" rel="noopener">Videos</a></li>
                 <li class="ampstart-dropdown-item"><a href="https://www.meetup.com/Transit-Techies-NYC/discussions/" class="text-decoration-none" target="_blank" rel="noopener">Contact/Discussion</a></li>
-                <li class="ampstart-dropdown-item"><a href="https://www.meetup.com/Transportation-Techies/" class="text-decoration-none" target="_blank" rel="noopener">D.C. Meetup</a></li>
+                <li class="ampstart-dropdown-item"><a href="https://www.meetup.com/Transportation-Techies/" class="text-decoration-none" target="_blank" rel="noopener">Transportation Techies D.C.</a></li>
             </ul>
           </section>
         </amp-accordion>
