--- a/_includes/body-navbar.html
+++ b/_includes/body-navbar.html
@@ -1,5 +1,5 @@
 <!-- Start Navbar -->
-<header class="ampstart-headerbar fixed flex justify-start items-center top-0 left-0 right-0 pl2 pr2">
+<header class="ampstart-headerbar ttnyc-headerbar fixed flex justify-start items-center top-0 left-0 right-0 pl2 pr2">
   <div role="button" on="tap:header-sidebar.toggle" tabindex="0" class="ampstart-navbar-trigger md-hide lg-hide pr2">☰</div>
   <span class="page-title"><a href="/">Transit Techies NYC</a></span>
   <nav class="ampstart-headerbar-nav ampstart-nav xs-hide sm-hide">
