second wave style edits

--- a/_includes/body-navbar.html
+++ b/_includes/body-navbar.html
@@ -10,7 +10,7 @@
       </li>
 
       <li class="ampstart-nav-item ">
-        <a href="https://www.meetup.com/Transit-Techies-NYC/discussions/"  target="_blank" rel="noopener" class="text-decoration-none block">MEETUP</a>
+        <a href="https://www.meetup.com/Transit-Techies-NYC"  target="_blank" rel="noopener" class="text-decoration-none block">MEETUP</a>
       </li>
 
       <li class="ampstart-nav-item ">
@@ -24,7 +24,7 @@
           <ul class="ampstart-dropdown-items list-reset m0 p0">
               <li class="ampstart-dropdown-item"><a href="https://www.youtube.com/channel/UCKSC5WJLFaWQKB0d5BnI6LA" class="text-decoration-none" target="_blank" rel="noopener">Videos</a></li>
               <li class="ampstart-dropdown-item"><a href="https://www.meetup.com/Transit-Techies-NYC/discussions/" class="text-decoration-none" target="_blank" rel="noopener">Contact/Discussion</a></li>
-              <li class="ampstart-dropdown-item"><a href="https://www.meetup.com/Transportation-Techies/" class="text-decoration-none" target="_blank" rel="noopener">Transportation Techies D.C.</a></li>
+              <li class="ampstart-dropdown-item"><a href="https://www.meetup.com/Transportation-Techies/" class="text-decoration-none" target="_blank" rel="noopener">D.C. Meetup</a></li>
           </ul>
         </section>
         </amp-accordion>
