--- a/_includes/body-submit.html
+++ b/_includes/body-submit.html
@@ -2,6 +2,6 @@
 	<div class="clearfix">
 	  <h3>Submit a Talk</h3>
 	  <p class="px3">Made something you want to show the community? Have an idea for a talk? Fill in our open call for speakers form!</p>
-	  <a href="https://goo.gl/forms/yHRxsngEwGvJHQux2" title="https://goo.gl/forms/yHRxsngEwGvJHQux2" target="_blank" rel="noopener"><button class="ampstart-btn primary-btn-white centered">Speaker Form</button></a>
+	  <a href="https://goo.gl/forms/yHRxsngEwGvJHQux2" title="https://goo.gl/forms/yHRxsngEwGvJHQux2" target="_blank" rel="noopener" class="button"><button class="ampstart-btn primary-btn-white centered">Speaker Form</button></a>
 	</div>
 </section>
