--- a/_includes/head-scripts.html
+++ b/_includes/head-scripts.html
@@ -9,3 +9,4 @@
 <script async custom-element="amp-list" src="https://cdn.ampproject.org/v0/amp-list-0.1.js"></script>
 <script async custom-template="amp-mustache" src="https://cdn.ampproject.org/v0/amp-mustache-0.2.js"></script>
 <script async custom-element="amp-youtube" src="https://cdn.ampproject.org/v0/amp-youtube-0.1.js"></script>
+<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
