schedule card styling

--- a/_includes/head-styles.html
+++ b/_includes/head-styles.html
@@ -32,8 +32,17 @@ h3 {
 	margin: 0 0 .5rem 0;
 }
 
+h4 {
+	font-weight: 600;
+	margin: 0 0 .5rem 0;
+}
+
 button {
 	margin: 1.2rem 0 0;
+}
+
+* {
+	box-sizing: inherit;
 }
 
 .ampstart-btn {
@@ -118,12 +127,6 @@ section {
   margin-left: auto;
 }
 
-.event-item {
-  display: block;
-  min-height: 110px;
-  width: 80%;
-}
-
 .card {
   box-shadow: 0 3px 8px 0 rgba(0,0,0,0.1);
   transition: 0.2s;
@@ -143,28 +146,6 @@ section {
 
 .card:hover {
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
-
-.event-item amp-img {
-    border-radius: 5px 5px 0 0;
-    float: left;
-    margin-right: 16px;
-}
-
-.events {
-    display: block;
-    height: 110px;
-    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-    background: #fff;
-    border-radius: 2px;
-    margin-bottom: 15px;
-    padding: 5px;
-    position: relative;
-  }
-
-.events amp-img {
-    float: left;
-    margin-right: 16px;
 }
 
 .amp-list-placeholder div[placeholder] div {
@@ -238,6 +219,11 @@ section {
 	color: var(--color-purple);
 	text-transform: uppercase;
 	margin: 0 1rem;
+	line-height: 2.4rem;
+}
+
+.i-amphtml-accordion-header:focus {
+	outline: none;
 }
 
 /*about section*/
@@ -282,7 +268,6 @@ section {
 }
 
 #past-speakers-container .card amp-img{
-  /*border-radius: 50%;*/
   width: 165px;
   height: 165px;
 }
@@ -303,6 +288,45 @@ section {
 	font-family: Helvetica, sans-serif;
 	margin-top: 3rem;
 }
+
+/*schedule cards section*/
+.event-item {
+  display: block;
+  min-height: 140px;
+  border-style: solid;
+  border-color: var(--color-purple);
+  margin-bottom: 1rem;
+  padding: 1rem;
+  /*  width: 80%;*/
+}
+
+.event-item amp-img {
+    border-radius: 5px 5px 0 0;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+.event-item-body {
+	margin-bottom: 0.8rem;
+}
+
+.event-item-body a {
+	text-decoration: none;
+	color: black;
+}
+
+.event-item-link {
+	text-transform: uppercase;
+	text-decoration: none;
+	font-weight: 600;
+	color: var(--color-purple);
+	margin-right: 2rem;
+}
+
+.event-item-link:visited {
+	color: var(--color-purple);
+}
+
 
 /*footer styles*/
 .ampstart-footer {
