Added partners section

--- a/_includes/head-styles.html
+++ b/_includes/head-styles.html
@@ -248,6 +248,12 @@ section {
   color: white;
 }
 
+/*body-partners partial*/
+#partners-section {
+  background: var(--color-lightgray);
+  color: var(--color-darkgray);
+}
+
 /*body-videos partial*/
 #videos-section {
   background: var(--color-lightgray);
@@ -255,6 +261,10 @@ section {
 }
 
 /*past speakers grid*/
+#past-speakers {
+	margin-top: 4rem;
+}
+
 #past-speakers-container {
   margin: 4rem 0;
   display: flex;
@@ -281,6 +291,7 @@ section {
 
 /*past-talks section*/
 #past-presentations {
+	margin-top: 4rem;
 	margin-bottom: 4rem;
 }
 
