added next event header

--- a/_includes/head-styles.html
+++ b/_includes/head-styles.html
@@ -239,7 +239,13 @@ section {
 .page-header {
 	background-color: var(--color-purple);
 	color: white;
-	margin-bottom: 4rem;
+	margin-bottom: 2rem;
+}
+
+.page-header h2 {
+	font-family: Roboto, Helvetica, Droid Sans, sans-serif;
+	font-weight: 400;
+	font-size: 1.8rem;
 }
 
 /*body-submit partial*/
