removed focus outline on white primary btn

--- a/_includes/head-styles.html
+++ b/_includes/head-styles.html
@@ -65,6 +65,10 @@ button {
 	background-color: white;
 }
 
+.primary-btn-white:active, .primary-btn-white:focus {
+	outline: none;
+}
+
 .primary-btn-purple {
 	border-width: 0px;
 	background-color: var(--color-purple);
