More progress on layout redo

--- a/_includes/v2-body-nav.html
+++ b/_includes/v2-body-nav.html
@@ -10,17 +10,17 @@
         <li><a href="https://www.meetup.com/Transit-Techies-NYC" target="_blank" rel="noopener" class="text-decoration-none">MEETUP</a></li>
         <li><a href="/past" class="text-decoration-none">PAST EVENTS</a></li>
         <li>
-        <amp-accordion layout="container" disable-session-states="" class="navbar-dropdown">
-          <section>
-            <header>RESOURCES</header>
-            <ul class="list-reset">
-              <li><a href="https://www.youtube.com/channel/UCKSC5WJLFaWQKB0d5BnI6LA" class="text-decoration-none" target="_blank" rel="noopener">Videos</a></li>
-              <li><a href="https://www.meetup.com/Transit-Techies-NYC/discussions/" class="text-decoration-none" target="_blank" rel="noopener">Contact/Discussion</a></li>
-              <li><a href="https://www.meetup.com/Transportation-Techies/" class="text-decoration-none" target="_blank" rel="noopener">D.C. Meetup</a></li>
-            </ul>
-          </section>
-        </amp-accordion>
-      </li>
+          <amp-accordion layout="container" disable-session-states="" class="navbar-dropdown">
+            <section>
+              <header>RESOURCES</header>
+              <ul class="list-reset">
+                <li><a href="https://www.youtube.com/channel/UCKSC5WJLFaWQKB0d5BnI6LA" class="text-decoration-none" target="_blank" rel="noopener">Videos</a></li>
+                <li><a href="https://www.meetup.com/Transit-Techies-NYC/discussions/" class="text-decoration-none" target="_blank" rel="noopener">Contact/Discussion</a></li>
+                <li><a href="https://www.meetup.com/Transportation-Techies/" class="text-decoration-none" target="_blank" rel="noopener">D.C. Meetup</a></li>
+              </ul>
+            </section>
+          </amp-accordion>
+        </li>
       </ul>
     </div>
   </nav>
@@ -44,5 +44,6 @@
           </section>
         </amp-accordion>
       </li>
+      {% include v2-body-shareicons.html %}
     </ul>
   </amp-sidebar>
