--- a/_layouts/v2layout.html
+++ b/_layouts/v2layout.html
@@ -1,5 +1,4 @@
 <!--- Copyright 2018 Transit Techies -->
-
 <!doctype html>
 <html amp="" lang="en">
 <head>
@@ -12,8 +11,6 @@
 
   {{ content }}
 
-  <footer>
-    © Transit Techies, 2018
-  </footer>
+  {% include v2-body-footer.html %}
 </body>
 </html>
