--- a/_includes/v2-head-meta.html
+++ b/_includes/v2-head-meta.html
@@ -5,3 +5,5 @@
   
   <link rel="canonical" href="{{ site.url }}{{ page.url | replace:'index.html',''}}">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+  <link rel="manifest" href="/manifest.json">
+  <meta name="theme-color" content="#310967">
