--- a/_includes/v2-body-pastevents.html
+++ b/_includes/v2-body-pastevents.html
@@ -2,18 +2,18 @@
   <div class="pure-g">
     <div class="pure-u-md-1-8"></div>
     <div class="pure-u-1 pure-u-md-3-4">
-      <!-- Note: since AMP uses Mustache with braces to render dynamic content, we need to escape markdown processing here -->
-      {% raw  %}
       <amp-list class="amp-list-placeholder" noloading width="auto" reset-on-refresh height=660 src="https://us-central1-transittechies.cloudfunctions.net/getEvents?status=past">
 
         <div placeholder class="event-container">
           <div class="placeholder-card event-item"></div>
           <div class="placeholder-card event-item"></div>
         </div>
-        <div fallback class="event-container">
-          <div class="placeholder-card event-item"></div>
-          <div class="placeholder-card event-item"></div>
+        <div fallback >
+          {% include v2-body-trainanimation.html %}
+          <h3 class="center">Scroll down for more content!</h3>
         </div>
+        <!-- Note: since AMP uses Mustache with braces to render dynamic content, we need to escape markdown processing here -->
+        {% raw  %}
         <template type="amp-mustache">
           <div class="event-item outline-card">
             <div class="pure-g">
@@ -29,9 +29,9 @@
             </div>
           </div>
         </template>
+        {% endraw  %}
         <button overflow="" class="pure-button button-purple button-xlarge list-overflow" tabindex="0" role="button">See more</button>
       </amp-list>
-      {% endraw  %}
     </div>
   </div>
 </article>
