--- a/_includes/v2-head-styles.html
+++ b/_includes/v2-head-styles.html
@@ -87,7 +87,7 @@ footer {
   max-width: 100vw;
   height: 100px;
   background-color: var(--color-darkgray);
-  color: #000000;
+  color: #ffffff;
   text-align: center;
   padding: 2.4rem 0;
 }
