Changed copyright to entity code

--- a/_includes/v2-body-footer.html
+++ b/_includes/v2-body-footer.html
@@ -3,5 +3,5 @@
   <div>
     <a class="text-decoration-none" href="https://www.meetup.com/Transit-Techies-NYC/discussions/" target="_blank" rel="noopener">CONTACT</a>
   </div>
-  <p>© Transit Techies, 2018</p>
+  <p>&copy; Transit Techies, 2018</p>
 </footer>
