polish of index styling

--- a/_includes/body-footer.html
+++ b/_includes/body-footer.html
@@ -1,17 +1,7 @@
-<!-- Start Footer -->
-<footer class="ampstart-footer ttnyc-footer flex flex-column items-center px3">
-
-	{% include body-social-section.html %}
-
-<!-- <nav class="ampstart-footer-nav"> -->
-<!-- <ul class="list-reset flex flex-wrap mb3">
-<li class="px1"> -->
-<a class="text-decoration-none ampstart-label mb1" href="https://www.meetup.com/Transit-Techies-NYC/discussions/" target="_blank" rel="noopener">Contact</a>
-<!-- </li>
-</ul> -->
-<!-- </nav> -->
-
-<small>
-© Transit Techies NYC
-</small>
+<footer>
+  {% include v2-body-shareicons.html %}
+  <div>
+    <a class="text-decoration-none" href="https://www.meetup.com/Transit-Techies-NYC/discussions/" target="_blank" rel="noopener">CONTACT</a>
+  </div>
+  <p>&copy; Transit Techies, 2018</p>
 </footer>
