--- a/_includes/v2-body-pastevents.html
+++ b/_includes/v2-body-pastevents.html
@@ -8,7 +8,7 @@
           <div class="placeholder-card event-item"></div>
         </div>
         <div fallback >
-          {% include v2-body-trainanimation.html %}
+          {% include body-trainanimation.html %}
           <h3 class="center">Scroll down for more content!</h3>
         </div>
         <!-- Note: since AMP uses Mustache with braces to render dynamic content, we need to escape markdown processing here -->
