--- a/_includes/body-partners.html
+++ b/_includes/body-partners.html
@@ -1,14 +1,25 @@
-<section id="partners-section" class="blocked center">
-	<div class="clearfix">
-	  <h3>Partners and Sponsors</h3>
-  	  <p class="mb3">Transit Techies NYC is grateful for the help and support from the below groups.</p>
-	  <div class="flex-container">
-	  	<div class="sm-col sm-col-6">
-	  		<a href="https://www.meetup.com/Transportation-Techies/" target="_blank" rel="noopener"><amp-img height="60" width="60" style="border-radius: 50%" alt="Transportation Techies DC logo" src="/img/transportationtechiesdc-logo.jpg" class="centered"></amp-img></a>
-	  	</div>
-	  	<div class="sm-col sm-col-6">
-	  		<a href="https://www.intersection.com" target="_blank" rel="noopener"><amp-img height="60" width="300" alt="Intersection logo" src="/img/Intersection-logo-side.png" class="centered"></amp-img></a>
-	  	</div>
-	  </div>
-	</div>
-</section>
+  <article class="section-gray">
+    <div class="pure-g">
+      <div class="pure-u-md-1-4"></div>
+      <div class="pure-u-1 pure-u-md-1-2">
+        <h3 class="center">Partners and Sponsors</h2>
+        <p class="center">Transit Techies NYC is grateful for the help and support from the below groups.</p>
+        <div class="pure-g">
+          <div class="pure-u-1 pure-u-md-1-2">
+            <div class="pure-g">
+              <div class="centering-div">
+              <a href="https://www.meetup.com/Transportation-Techies/" target="_blank" rel="noopener" class="text-decoration-none"><amp-img height="60" width="60" style="border-radius: 50%" alt="Transportation Techies DC logo" src="/img/transportationtechiesdc-logo.jpg"></amp-img></a>
+            </div>
+            </div>
+          </div>
+          <div class="pure-u-1 pure-u-md-1-2">
+            <div class="pure-g">
+              <div class="centering-div">
+		            <a href="https://www.intersection.com" target="_blank" rel="noopener" class="text-decoration-none"><amp-img height="60" width="300" alt="Intersection logo" src="/img/Intersection-logo-side.png" class="centered"></amp-img></a>
+		        </div>
+		    </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </article>
