--- a/_includes/body-submit.html
+++ b/_includes/body-submit.html
@@ -1,7 +1,12 @@
-<section id="submit-section" class="blocked center">
-	<div class="clearfix">
-	  <h3>Submit a Talk</h3>
-	  <p class="px3">Made something you want to show the community? Have an idea for a talk? Fill in our open call for speakers form!</p>
-	  <a href="https://goo.gl/forms/yHRxsngEwGvJHQux2" title="https://goo.gl/forms/yHRxsngEwGvJHQux2" target="_blank" rel="noopener" class="button"><button class="ampstart-btn primary-btn-white centered">Speaker Form</button></a>
-	</div>
-</section>
+<article class="section-purple">
+  <div class="pure-g">
+    <div class="pure-u-md-1-4"></div>
+    <div class="pure-u-1 pure-u-md-1-2 center">
+      <h3>Submit a Talk</h3>
+      <p>Made something you want to show the community? Have an idea for a talk? Fill in our open call for speakers form!</p>
+      <div class="centering-div">
+        <a href="https://goo.gl/forms/yHRxsngEwGvJHQux2" title="https://goo.gl/forms/yHRxsngEwGvJHQux2" target="_blank" rel="noopener" class="pure-button button-white button-white-primary button-large">Speaker Form</a>
+      </div>
+    </div>
+  </div>
+</article>
